--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
     </div>
   </div>
   <!-- dev  -->
-  <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+<!--  <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>-->
   <!-- prod -->
-<!--  <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>-->
+  <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
 </body>
 </html>
