--- a/Timechko/index.html
+++ b/Timechko/index.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>Timechko</title>
   <link rel="icon" type="image/x-icon" href="favicon.png">
@@ -12,13 +12,13 @@
     * {
         box-sizing: border-box;
     }
-    .loading > *:last-child {
+    .loading #app {
         display: none;
     }
-    .loaded > *:first-child {
+    .loaded #loading-placeholder {
         display: none;
     }
-    .table-header > td > span {
+    .table-header {
         font-size: 1.25rem !important;
         font-weight: bold;
         padding-top: 1rem;
@@ -37,6 +37,10 @@
     select {
         cursor: pointer;
     }
+    #app {
+        display: flex;
+        flex-direction: column;
+    }
     #app * {
         font-family: monospace;
         font-size: 1rem;
@@ -52,7 +56,7 @@
         text-decoration: #ff6363 underline 2px;
     }
     .input {
-        width: 100%;
+        min-width: 70ch;
         border: none;
         text-align: center;
     }
@@ -166,19 +170,23 @@
     }
   </style>
 </head>
-<body lang="en">
-  <div style="display: flex; flex-direction: row; justify-content: center;">
-    <div style="flex-basis: 75vw;">
-      <h1>Timechko</h1>
-      <div id="root" class="loading">
-        <div style="text-align: center;">
-          <span class="clock-loader">⌚</span><br>
-          <span>Loading...</span><br>
-          <span style="padding: 3rem; display: inline-block;">This page runs dotnet runtime inside WebAssembly, be patient</span>
-        </div>
-        <div>
-          <div id="app" style="display: flex; flex-direction: column;">
-            <div style="align-self: flex-end">
+<body style="display: flex; flex-direction: column; align-items: start; margin: 0;">
+  <div style="margin: 0 auto 0 auto; display: flex; flex-direction: column; min-height: 100vh;">
+    <h1>Timechko</h1>
+
+    <div id="root" class="loading" style="flex: 1;">
+      <div id="loading-placeholder" style="text-align: center;">
+        <span class="clock-loader">⌚</span><br>
+        <span>Loading...</span><br>
+        <span style="padding: 3rem; display: inline-block;">
+          This page runs dotnet runtime inside WebAssembly, be patient.<br>
+          Overall bundle size is about 2,48 MB (1,67 MB compressed)
+        </span>
+      </div>
+      <div id="app">
+        <div style="align-self: center;">
+          <div style="display: flex; justify-content: end;">
+            <div>
               Table columns:
               <ul>
                 <li><label><input type="checkbox" checked v-model="columns.dateTime"            >DateTime               </label></li>
@@ -189,87 +197,90 @@
                 <li><label><input type="checkbox"         v-model="columns.timeGuid"            >TimeGuid               </label></li>
               </ul>
             </div>
-            <div style="display: flex; flex-direction: row; align-items: center; padding: 2px; border-radius: 5px;" :class="inputClass" @animationend="flushFailureIndicated">
-              <label accesskey="q" style="flex: 1;">
-                <input type="text" placeholder="DateTime | UnixTime | Ticks | TimeGuid" v-model="input" @keydown.enter="flush" class="input">
-              </label>
-              <span :class="parsed && '' || 'hidden'" @click="flush" class="enter-sign" title="Keep record. Same as hit enter">⏎</span>
-              <label accesskey="t" style="flex: 0;">
-                <select v-model="type" style="border: none; background: none; direction: rtl;">
-                  <option selected>Guess                  </option>
-                  <option         >DateTime               </option>
-                  <option         >UnixTime (seconds)     </option>
-                  <option         >UnixTime (milliseconds)</option>
-                  <option         >UnixTime (microseconds)</option>
-                  <option         >UnixTime (guess)       </option>
-                  <option         >Ticks                  </option>
-                  <option         >TimeGuid               </option>
-                </select>
-              </label>
-            </div>
-            <div style="margin-top: 1rem;">
-              <table style="border-collapse: collapse; margin-left: auto; margin-right: auto;">
-                <tbody>
-                  <tr v-if="parsed">
-                    <td v-if="shownColumns.dateTime"             :class="parsed.type === 'DateTime'             && 'value-match'">{{ parsed.dateTime }}            </td>
-                    <td v-if="shownColumns.unixTimeSeconds"      :class="parsed.type === 'UnixTimeSeconds'      && 'value-match'">{{ parsed.unixTimeSeconds }}     </td>
-                    <td v-if="shownColumns.unixTimeMilliseconds" :class="parsed.type === 'UnixTimeMilliseconds' && 'value-match'">{{ parsed.unixTimeMilliseconds }}</td>
-                    <td v-if="shownColumns.unixTimeMicroseconds" :class="parsed.type === 'UnixTimeMicroseconds' && 'value-match'">{{ parsed.unixTimeMicroseconds }}</td>
-                    <td v-if="shownColumns.ticks"                :class="parsed.type === 'Ticks'                && 'value-match'">{{ parsed.ticks    }}            </td>
-                    <td v-if="shownColumns.timeGuid"             :class="parsed.type === 'TimeGuid'             && 'value-match'">{{ parsed.timeGuid }}            </td>
-                    <td></td>
-                  </tr>
-                  <tr v-else>
-                    <td colspan="3" style="text-align: center;">
-                      <span class="not-parsed">{{ input }}</span> <br>
-                    </td>
-                  </tr>
-  
-                  <tr class="table-header">
-                    <!-- Обыграть минимальную ширину по-другому - с помощью типовых значений -->
-                    <td v-if="shownColumns.dateTime"            ><span style="min-width: 176px;">DateTime (UTC)         </span></td>
-                    <td v-if="shownColumns.unixTimeSeconds"     ><span style="min-width:  88px;">UnixTime<br>(seconds)     </span></td>
-                    <td v-if="shownColumns.unixTimeMilliseconds"><span style="min-width:  88px;">UnixTime<br>(milliseconds)</span></td>
-                    <td v-if="shownColumns.unixTimeMicroseconds"><span style="min-width:  88px;">UnixTime<br>(microseconds)</span></td>
-                    <td v-if="shownColumns.ticks"               ><span style="min-width: 160px;">Ticks                  </span></td>
-                    <td v-if="shownColumns.timeGuid"            ><span style="min-width: 160px;">TimeGuid               </span></td>
-                    <td></td>
-                  </tr>
-  
-                  <tr
-                          v-for="(item, index) in parsedQueries"
-                          :class="item.origin === 'input' && 'added-row'"
-                          :key="item.index"
-                  >
-                    <td :class="item.value.type === 'DateTime' && 'type-match'" v-if="shownColumns.dateTime">
-                      <span>{{ item.value.dateTime }}</span>
-                    </td>
-                    <td :class="item.value.type === 'UnixTimeSeconds' && 'type-match'" v-if="shownColumns.unixTimeSeconds">
-                      <span>{{ item.value.unixTimeSeconds }}</span>
-                    </td>
-                    <td :class="item.value.type === 'UnixTimeMilliseconds' && 'type-match'" v-if="shownColumns.unixTimeMilliseconds">
-                      <span>{{ item.value.unixTimeMilliseconds }}</span>
-                    </td>
-                    <td :class="item.value.type === 'UnixTimeMicroseconds' && 'type-match'" v-if="shownColumns.unixTimeMicroseconds">
-                      <span>{{ item.value.unixTimeMicroseconds }}</span>
-                    </td>
-                    <td :class="item.value.type === 'Ticks' && 'type-match'" v-if="shownColumns.ticks">
-                      <span>{{ item.value.ticks    }}</span>
-                    </td>
-                    <td :class="item.value.type === 'TimeGuid' && 'type-match'" v-if="shownColumns.timeGuid">
-                      <span>{{ item.value.timeGuid    }}</span>
-                    </td>
-                    <td>
-                      <span class="remove-button" @click="remove(index)">❌</span>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
           </div>
+          <div style="display: flex; flex-direction: row; align-items: center; padding: 2px; border-radius: 5px;" :class="inputClass" @animationend="flushFailureIndicated">
+            <label accesskey="q" style="flex: 0;">
+              <input type="text" placeholder="DateTime | UnixTime | Ticks | TimeGuid" v-model="input" @keydown.enter="flush" class="input">
+            </label>
+            <span :class="parsed && '' || 'hidden'" @click="flush" class="enter-sign" title="Keep record. Same as hit enter">⏎</span>
+            <label accesskey="t" style="flex: 0;">
+              <select v-model="type" style="border: none; background: none; direction: rtl;">
+                <option selected>Guess                  </option>
+                <option         >DateTime               </option>
+                <option         >UnixTime (seconds)     </option>
+                <option         >UnixTime (milliseconds)</option>
+                <option         >UnixTime (microseconds)</option>
+                <option         >UnixTime (guess)       </option>
+                <option         >Ticks                  </option>
+                <option         >TimeGuid               </option>
+              </select>
+            </label>
+          </div>
+        </div>
+        <div style="margin-top: 1rem;">
+          <table style="border-collapse: collapse; margin-left: auto; margin-right: auto;">
+            <tbody>
+              <tr v-if="parsed">
+                <td v-if="shownColumns.dateTime"             :class="parsed.type === 'DateTime'             && 'value-match'">{{ parsed.dateTime }}            </td>
+                <td v-if="shownColumns.unixTimeSeconds"      :class="parsed.type === 'UnixTimeSeconds'      && 'value-match'">{{ parsed.unixTimeSeconds }}     </td>
+                <td v-if="shownColumns.unixTimeMilliseconds" :class="parsed.type === 'UnixTimeMilliseconds' && 'value-match'">{{ parsed.unixTimeMilliseconds }}</td>
+                <td v-if="shownColumns.unixTimeMicroseconds" :class="parsed.type === 'UnixTimeMicroseconds' && 'value-match'">{{ parsed.unixTimeMicroseconds }}</td>
+                <td v-if="shownColumns.ticks"                :class="parsed.type === 'Ticks'                && 'value-match'">{{ parsed.ticks    }}            </td>
+                <td v-if="shownColumns.timeGuid"             :class="parsed.type === 'TimeGuid'             && 'value-match'">{{ parsed.timeGuid }}            </td>
+                <td></td>
+              </tr>
+              <tr v-else>
+                <td colspan="3" style="text-align: center;">
+                  <span class="not-parsed">{{ input }}</span> <br>
+                </td>
+              </tr>
+
+              <tr>
+                <td v-if="shownColumns.dateTime"             style="min-width: 20ch;"><span class="table-header">DateTime<br>(UTC)         </span></td>
+                <td v-if="shownColumns.unixTimeSeconds"      style="min-width: 11ch;"><span class="table-header">UnixTime<br>(seconds)     </span></td>
+                <td v-if="shownColumns.unixTimeMilliseconds" style="min-width: 14ch;"><span class="table-header">UnixTime<br>(milliseconds)</span></td>
+                <td v-if="shownColumns.unixTimeMicroseconds" style="min-width: 17ch;"><span class="table-header">UnixTime<br>(microseconds)</span></td>
+                <td v-if="shownColumns.ticks"                style="min-width: 18ch;"><span class="table-header">Ticks                     </span></td>
+                <td v-if="shownColumns.timeGuid"             style="min-width: 36ch;"><span class="table-header">TimeGuid                  </span></td>
+                <td><span class="hidden">❌</span></td>
+              </tr>
+
+              <tr
+                      v-for="(item, index) in parsedQueries"
+                      :class="item.origin === 'input' && 'added-row'"
+                      :key="item.index"
+              >
+                <td :class="item.value.type === 'DateTime' && 'type-match'" v-if="shownColumns.dateTime">
+                  <span>{{ item.value.dateTime }}</span>
+                </td>
+                <td :class="item.value.type === 'UnixTimeSeconds' && 'type-match'" v-if="shownColumns.unixTimeSeconds">
+                  <span>{{ item.value.unixTimeSeconds }}</span>
+                </td>
+                <td :class="item.value.type === 'UnixTimeMilliseconds' && 'type-match'" v-if="shownColumns.unixTimeMilliseconds">
+                  <span>{{ item.value.unixTimeMilliseconds }}</span>
+                </td>
+                <td :class="item.value.type === 'UnixTimeMicroseconds' && 'type-match'" v-if="shownColumns.unixTimeMicroseconds">
+                  <span>{{ item.value.unixTimeMicroseconds }}</span>
+                </td>
+                <td :class="item.value.type === 'Ticks' && 'type-match'" v-if="shownColumns.ticks">
+                  <span>{{ item.value.ticks    }}</span>
+                </td>
+                <td :class="item.value.type === 'TimeGuid' && 'type-match'" v-if="shownColumns.timeGuid">
+                  <span>{{ item.value.timeGuid    }}</span>
+                </td>
+                <td>
+                  <span class="remove-button" @click="remove(index)">❌</span>
+                </td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
+
+    <footer style="text-align: center; padding: 1rem 0 1rem 0; color: gray;">
+      Pepelev Alexey | <a href="https://github.com/pepelev/Timechko" target="_blank">Source on Github</a>
+    </footer>
   </div>
 
   <!-- dev  -->
@@ -283,8 +294,11 @@
     - V добавить логику отображения колонок
     - V сконвертировать существующий localStorage и завести новый формат хранения
     - X сохранять выбранные колонки в localStorage
+    - V кодировать type в hash
+    -   сверстать хорошо
+    -   значок enter не появляется
     -   TimeGuid
-    -   спрятать содержательную часть на время загрузки
+    - V спрятать содержательную часть на время загрузки
     - V убрать точки у названия колонок
     - V добавить курсор pointer для выбора типа
     - V unix time не парсится
