--- a/Timechko/index.html
+++ b/Timechko/index.html
@@ -5,187 +5,250 @@
   <link rel="icon" type="image/x-icon" href="favicon.png">
   <meta charset="UTF-8">
   <meta name="viewport"    content="width=device-width, initial-scale=1">
-  <meta name="keywords"    content="time, date, datetime, unixtime, ticks, dotnet, convert">
-  <meta name="description" content="Convert ticks and unixtime to datetime and vice versa">
+  <meta name="keywords"    content="time, date, datetime, unixtime, ticks, timeguid, dotnet, convert">
+  <meta name="description" content="Convert ticks and unixtime to datetime and vice versa. Get time from TimeGuid">
   <script type="module" src="main.js"></script>
+
+  <!-- misc -->
   <style>
-    * {
-        box-sizing: border-box;
+    .hidden {
+      visibility: hidden;
     }
-    .loading #app {
+  </style>
+
+  <!-- correct footer layout, vertical page extension, correct scaling -->
+  <style>
+    body {
+      display: flex;
+      flex-direction: column;
+      align-items: start;
+      margin: 0;
+    }
+    footer {
+      text-align: center;
+      padding: 1rem 0;
+      color: gray;
+    }
+    .content-stripe {
+      margin: 0 auto;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+      padding: 0 0.5rem;
+    }
+    #root {
+      flex: 1;
+    }
+  </style>
+
+  <!-- loading view -->
+  <style>
+      #loading-view {
+        text-align: center;
+      }
+      .loading #app {
         display: none;
-    }
-    .loaded #loading-placeholder {
+      }
+      .loaded #loading-view {
         display: none;
+      }
+    .clock-loader {
+      display: inline-block;
+      font-size: 6.5rem;
+      animation-duration: 2s;
+      animation-name: rotation;
+      animation-iteration-count: infinite;
+      animation-timing-function: linear;
     }
-    .table-header {
+    @keyframes rotation {
+      from {
+        transform: rotate(0);
+      }
+      to {
+        transform: rotate(1turn);
+      }
+    }
+    .loading-explanation {
+      padding: 3rem;
+      display: inline-block;
+    }
+  </style>
+
+  <!-- #app -->
+  <style>
+      #app {
+          display: flex;
+          flex-direction: column;
+          gap: 1rem;
+      }
+      #app * {
+          font-family: monospace;
+          font-size: 1rem;
+      }
+  </style>
+
+  <!-- app.in -->
+  <style>
+    #column-selection {
+      display: flex;
+      justify-content: end;
+    }
+    #column-selection ul {
+      list-style-type: none;
+      padding: 0;
+    }
+    #input-box {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      padding: 2px;
+      border-radius: 5px;
+    }
+    .input {
+      min-width: 70ch;
+      border: none;
+      text-align: center;
+    }
+    .input:focus-visible {
+      outline: none;
+    }
+    .input-empty:focus-within {
+      box-shadow: 0 0 5px 2px black;
+    }
+    .input-parsed:focus-within {
+      box-shadow: 0 0 5px 2px green;
+    }
+    .input-not-parsed:focus-within {
+      box-shadow: 0 0 5px 2px red;
+    }
+    .input-empty, .input-parsed, .input-not-parsed {
+      box-shadow: 0 0 3px 1px black;
+    }
+    .enter-sign {
+      font-weight: bold;
+      cursor: pointer;
+      user-select: none;
+      flex: 0;
+    }
+    #input-box select {
+       cursor: pointer;
+    }
+    .failed-flush {
+      animation-duration: .2s;
+      animation-name: error-highlight;
+      animation-iteration-count: 1;
+    }
+    @keyframes error-highlight {
+      0% {
+        transform: translate(0);
+      }
+      10% {
+        transform: translate(-0.2rem);
+      }
+      30% {
+        transform: translate(0.2rem);
+      }
+      50% {
+        transform: translate(-0.2rem);
+      }
+      70% {
+        transform: translate(0.2rem);
+      }
+      90% {
+        transform: translate(-0.2rem);
+      }
+      100% {
+        transform: translate(0);
+      }
+    }
+  </style>
+
+  <!-- app.out -->
+  <style>
+      #out table {
+        border-collapse: collapse;
+        margin: 0 auto;
+      }
+      #out td {
+        text-align: center;
+      }
+      #out td:not(:last-child) {
+        padding-right: 1rem;
+      }
+      .remove-button {
+        visibility: hidden;
+        cursor: pointer;
+        user-select: none;
+      }
+      .remove-button:hover {
+        border-radius: 7px;
+        background: lightgray;
+      }
+      tr:hover .remove-button {
+        visibility: visible;
+      }
+      .value-match {
+        text-decoration: #1fb91f underline 2px;
+        font-weight: bold;
+      }
+      .type-match {
+        text-decoration: black underline;
+      }
+      .not-parsed {
+        text-decoration: #ff6363 underline 2px;
+      }
+      .table-header {
         font-size: 1.25rem !important;
         font-weight: bold;
         padding-top: 1rem;
         display: inline-block;
-    }
-    ul {
-        list-style-type: none;
-        padding: 0;
-    }
-    td {
-        text-align: center;
-    }
-    td:not(:last-child) {
-        padding-right: 1rem;
-    }
-    select {
-        cursor: pointer;
-    }
-    #app {
-        display: flex;
-        flex-direction: column;
-    }
-    #app * {
-        font-family: monospace;
-        font-size: 1rem;
-    }
-    .value-match {
-        text-decoration: #1fb91f underline 2px;
-        font-weight: bold;
-    }
-    .type-match {
-        text-decoration: black underline;
-    }
-    .not-parsed {
-        text-decoration: #ff6363 underline 2px;
-    }
-    .input {
-        min-width: 70ch;
-        border: none;
-        text-align: center;
-    }
-    .input:focus-visible {
-        outline: none;
-    }
-    .input-empty:focus-within {
-        box-shadow: 0 0 5px 2px black;
-    }
-    .input-parsed:focus-within {
-        box-shadow: 0 0 5px 2px green;
-    }
-    .input-not-parsed:focus-within {
-        box-shadow: 0 0 5px 2px red;
-    }
-    .input-empty, .input-parsed, .input-not-parsed {
-        box-shadow: 0 0 3px 1px black;
-    }
-    .enter-sign {
-        cursor: pointer;
-        user-select: none;
-        flex: 0;
-    }
-    .hidden {
-        visibility: hidden;
-    }
-    .remove-button {
-        visibility: hidden;
-        cursor: pointer;
-        user-select: none;
-    }
-    .remove-button:hover {
-        border-radius: 7px;
-        background: lightgray;
-    }
-    tr:hover .remove-button {
-        visibility: visible;
-    }
-    .added-row {
+      }
+      .added-row {
         animation-duration: .4s;
         animation-name: highlight;
         animation-iteration-count: 2;
         animation-direction: alternate;
-    }
-    .added-row span {
+      }
+      .added-row span {
         animation-duration: .7s;
         animation-name: appearing;
         animation-timing-function: linear;
-    }
-    @keyframes highlight {
+      }
+      @keyframes highlight {
         from {
-            background: none;
+          background: none;
         }
         to {
-            background: lightgreen;
+          background: lightgreen;
         }
-    }
-
-    @keyframes appearing {
+      }
+      @keyframes appearing {
         from {
-            opacity: 0.2;
+          opacity: 0.2;
         }
         to {
-            opacity: 1;
+          opacity: 1;
         }
-    }
-    .failed-flush {
-        animation-duration: .2s;
-        animation-name: error-highlight;
-        animation-iteration-count: 1;
-    }
-    @keyframes error-highlight {
-        0% {
-            transform: translate(0);
-        }
-        10% {
-            transform: translate(-0.2rem);
-        }
-        30% {
-            transform: translate(0.2rem);
-        }
-        50% {
-            transform: translate(-0.2rem);
-        }
-        70% {
-            transform: translate(0.2rem);
-        }
-        90% {
-            transform: translate(-0.2rem);
-        }
-        100% {
-            transform: translate(0);
-        }
-    }
-
-    .clock-loader {
-        display: inline-block;
-        font-size: 6.5rem;
-        animation-duration: 2s;
-        animation-name: rotation;
-        animation-iteration-count: infinite;
-        animation-timing-function: linear;
-    }
-    @keyframes rotation {
-        from {
-            transform: rotate(0);
-        }
-        to {
-            transform: rotate(1turn);
-        }
-    }
+      }
   </style>
+
 </head>
-<body style="display: flex; flex-direction: column; align-items: start; margin: 0;">
-  <div style="margin: 0 auto 0 auto; display: flex; flex-direction: column; min-height: 100vh;">
+<body>
+  <div class="content-stripe">
     <h1>Timechko</h1>
 
-    <div id="root" class="loading" style="flex: 1;">
-      <div id="loading-placeholder" style="text-align: center;">
+    <div id="root" class="loading">
+      <div id="loading-view">
         <span class="clock-loader">⌚</span><br>
         <span>Loading...</span><br>
-        <span style="padding: 3rem; display: inline-block;">
+        <span class="loading-explanation">
           This page runs dotnet runtime inside WebAssembly, be patient.<br>
           Overall bundle size is about 2,48 MB (1,67 MB compressed)
         </span>
       </div>
       <div id="app">
-        <div style="align-self: center;">
-          <div style="display: flex; justify-content: end;">
+        <div id="in">
+          <div id="column-selection">
             <div>
               Table columns:
               <ul>
@@ -198,12 +261,12 @@
               </ul>
             </div>
           </div>
-          <div style="display: flex; flex-direction: row; align-items: center; padding: 2px; border-radius: 5px;" :class="inputClass" @animationend="flushFailureIndicated">
-            <label accesskey="q" style="flex: 0;">
-              <input type="text" placeholder="DateTime | UnixTime | Ticks | TimeGuid" v-model="input" @keydown.enter="flush" class="input">
+          <div id="input-box" :class="inputClass" @animationend="flushFailureIndicated">
+            <label accesskey="q">
+              <input type="text" maxlength="60" placeholder="DateTime | UnixTime | Ticks | TimeGuid" v-model="input" @keydown.enter="flush" class="input">
             </label>
-            <span :class="parsed && '' || 'hidden'" @click="flush" class="enter-sign" title="Keep record. Same as hit enter">⏎</span>
-            <label accesskey="t" style="flex: 0;">
+            <span :class="!!parsed || 'hidden'" @click="flush" class="enter-sign" title="Keep record. Same as hit enter">⏎</span>
+            <label accesskey="t">
               <select v-model="type" style="border: none; background: none; direction: rtl;">
                 <option selected>Guess                  </option>
                 <option         >DateTime               </option>
@@ -217,8 +280,8 @@
             </label>
           </div>
         </div>
-        <div style="margin-top: 1rem;">
-          <table style="border-collapse: collapse; margin-left: auto; margin-right: auto;">
+        <div id="out">
+          <table>
             <tbody>
               <tr v-if="parsed">
                 <td v-if="shownColumns.dateTime"             :class="parsed.type === 'DateTime'             && 'value-match'">{{ parsed.dateTime }}            </td>
@@ -227,10 +290,9 @@
                 <td v-if="shownColumns.unixTimeMicroseconds" :class="parsed.type === 'UnixTimeMicroseconds' && 'value-match'">{{ parsed.unixTimeMicroseconds }}</td>
                 <td v-if="shownColumns.ticks"                :class="parsed.type === 'Ticks'                && 'value-match'">{{ parsed.ticks    }}            </td>
                 <td v-if="shownColumns.timeGuid"             :class="parsed.type === 'TimeGuid'             && 'value-match'">{{ parsed.timeGuid }}            </td>
-                <td></td>
-              </tr>
+                </tr>
               <tr v-else>
-                <td colspan="3" style="text-align: center;">
+                <td colspan="999">
                   <span class="not-parsed">{{ input }}</span> <br>
                 </td>
               </tr>
@@ -263,10 +325,10 @@
                   <span>{{ item.value.unixTimeMicroseconds }}</span>
                 </td>
                 <td :class="item.value.type === 'Ticks' && 'type-match'" v-if="shownColumns.ticks">
-                  <span>{{ item.value.ticks    }}</span>
+                  <span>{{ item.value.ticks }}</span>
                 </td>
                 <td :class="item.value.type === 'TimeGuid' && 'type-match'" v-if="shownColumns.timeGuid">
-                  <span>{{ item.value.timeGuid    }}</span>
+                  <span>{{ item.value.timeGuid }}</span>
                 </td>
                 <td>
                   <span class="remove-button" @click="remove(index)">❌</span>
@@ -278,7 +340,7 @@
       </div>
     </div>
 
-    <footer style="text-align: center; padding: 1rem 0 1rem 0; color: gray;">
+    <footer>
       Pepelev Alexey | <a href="https://github.com/pepelev/Timechko" target="_blank">Source on Github</a>
     </footer>
   </div>
@@ -295,17 +357,16 @@
     - V сконвертировать существующий localStorage и завести новый формат хранения
     - X сохранять выбранные колонки в localStorage
     - V кодировать type в hash
-    -   сверстать хорошо
-    -   значок enter не появляется
+    - V сверстать хорошо
+    - V значок enter не появляется
     -   TimeGuid
     - V спрятать содержательную часть на время загрузки
     - V убрать точки у названия колонок
     - V добавить курсор pointer для выбора типа
     - V unix time не парсится
     - V выбор типа не работает
-    -   прибраться в размерах
-    -   вытащить стили
-    -   разбить стили на разные блоки по смыслу
+    - V прибраться в размерах
+    - V вытащить стили
     -   темная тема
 -->
 </body>
